--- a/TechStore.API/TechStore.API.csproj
+++ b/TechStore.API/TechStore.API.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ProductImages\**" />
+    <Content Remove="ProductImages\**" />
+    <EmbeddedResource Remove="ProductImages\**" />
+    <None Remove="ProductImages\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="FluentValidation" Version="11.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.2" />
