Write ImageService tests

--- a/TechStore.API.Tests/TechStore.API.Tests.csproj
+++ b/TechStore.API.Tests/TechStore.API.Tests.csproj
@@ -33,4 +33,22 @@
     <ProjectReference Include="..\TechStore.Web\TechStore.Web.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestImages\Good.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestImages\GoodUpdated.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestImages\NotImage.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestImages\TooLarge.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestImages\TooLargeSide.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
